--- a/src/main/resources/templates/board/updateform.html
+++ b/src/main/resources/templates/board/updateform.html
@@ -8,55 +8,112 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
 
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
+    body {
+        font-family: 'Roboto', sans-serif; /* 전체 글씨체 변경 */
+        background-color: #e8e8e8;
+        color: #333;
+        padding-left: 5rem; /* 양옆에 패딩 추가 */
+        padding-right: 5rem; /* 양옆에 패딩 추가 */
+    }
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #e8e8e8;
+        padding: 0.5rem 1rem;
+        color: #000;
+
+    }
+
+    .header a.header {
+        font-size: 1.4rem; /* 글씨 크기 조절 */
+        font-weight: bold; /* 글씨 두께 조절 */
+    }
+
+
+    .dropdown-content .dropdown-item:hover {
+        background-color: #f1f1f1;
+    }
+
+    .container {
+        max-width: 800px;
+        margin: 2em auto;
+        padding: 1em;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-group {
+        margin-bottom: 1em;
+    }
+
+    .form-group label {
+        display: block;
+        margin-bottom: 0.5em;
+    }
+
+    .form-group input, .form-group textarea {
+        width: 100%;
+        padding: 0.5em;
+        border: 1px solid #ced4da;
+        border-radius: 0.25em;
+    }
+
+    .btn {
+        background-color: #414141;
+        color: #fff;
+        padding: 0.5em 1em;
+        border: none;
+        border-radius: 0.25em;
+        cursor: pointer;
+    }
+
+    .btn:hover {
+        background-color: #b7b7b7;
+    }
+    .container h3 {
+        text-align: center;
+        font-weight: bold;
+        padding: 1rem 0;
+        font-size: 24px;
+    }
+
+
+</style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="/">홈</a>
+<nav class="header">
+    <a class="header" href="/">jini_log</a>
     <!--    href : 링크-->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item" sec:authorize="isAnonymous()">
-                <a class="nav-link" href="/auth/loginform">로그인</a>
-            </li>
-            <li class="nav-item" sec:authorize="isAnonymous()">
-                <a class="nav-link" href="/auth/joinform">회원가입</a>
-            </li>
 
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/board/saveform">글 작성</a>
-            </li>
-            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
-                <a class="nav-link dropdown-toggle" href="#" id="user-name" data-toggle="dropdown" sec:authentication="name">
-                    사용자 이름
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/user/updateform">설정</a>
-                    <a class="dropdown-item" href="#">블로그 이동</a>
-                    <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
-                    <a class="dropdown-item" href="/logout">로그아웃</a>
-                </div>
-            </li>
-        </ul>
-    </div>
 </nav>
 
 <div class="container">
+    <h3>✏️ 글 수정 폼</h3>
     <form>
         <input type="hidden" id="id" th:value="${post.id}">
         <div class="form-group">
-            <label for="title">Title</label>
+            <label for="title">글 제목</label>
             <div class="input-group">
                 <input th:value="${post.title}" type="text" class="form-control" id="title" placeholder="Enter title">
             </div>
 
         </div>
         <div class="form-group">
-            <label for="content">Content</label>
+            <label for="content">글 내용</label>
             <textarea class="form-control summernote" rows="5" id="content" th:text="${post.content}"></textarea>
         </div>
 
@@ -66,11 +123,6 @@
 
 
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-    <p>Created by Yujin</p>
-    <p>010-5408-7492</p>
-    <p>충청남도 천안시 XX동</p>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -121,6 +173,23 @@
 
     index.init();
 
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var dropdownToggle = document.querySelector('.nav-link.dropdown-toggle');
+        var dropdownContent = document.querySelector('.dropdown-content');
+
+        dropdownToggle.addEventListener('click', function(event) {
+            event.preventDefault();
+            dropdownContent.style.display = dropdownContent.style.display === 'block' ? 'none' : 'block';
+        });
+
+        document.addEventListener('click', function(event) {
+            if (!dropdownToggle.contains(event.target) && !dropdownContent.contains(event.target)) {
+                dropdownContent.style.display = 'none';
+            }
+        });
+    });
 </script>
 </body>
 </html>
